--- a/app/globals.css
+++ b/app/globals.css
@@ -7,5 +7,7 @@
   --color-base: #F9F9F9;
   --color-primary: #4A90E2;
   --color-secondary: #50E3C2;
+  --color-accent-1: #FFD166;
   --color-accent-2: #F25F5C;
+  --color-accent-3: #9D59EC;
 }
