Optimize report print pages for landscape layout

--- a/app/(protected)/reports/sites/sites.css
+++ b/app/(protected)/reports/sites/sites.css
@@ -42,10 +42,14 @@
 }
 
 .print-table-block {
-  margin-bottom: 12mm;
+  margin-bottom: 8mm;
 }
 
 @media print {
+  :root {
+    --reports-col-width: 9rem;
+  }
+
   .screen-table-wrapper {
     display: none !important;
   }
